[gd_scene load_steps=7 format=2]

[ext_resource path="res://track/track.tscn" type="PackedScene" id=1]
[ext_resource path="res://generator/track_generator.gd" type="Script" id=2]
[ext_resource path="res://theme/FlatUI/kenneyUI.tres" type="Theme" id=5]

[sub_resource type="PrismMesh" id=3]
size = Vector3( 10, 20, 5 )

[sub_resource type="Curve3D" id=4]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 29.613, 0, -4.68664, 0, 0, 0, 0, 0, 0, 35.4745, 0, -1.19361, 0, 0, 0, 0, 0, 0, 41.0126, 0, 2.70689, 0, 0, 0, 0, 0, 0, 46.1299, 0, 6.8105, 0, 0, 0, 0, 0, 0, 46.8419, -1, 24.4581, 0, 0, 0, 0, 0, 0, 70.0349, -1, 49.2376, 0, 0, 0, 0, 0, 0, 91.3443, 0, 52.7655, 0, 0, 0, 0, 0, 0, 95.3592, 0, 56.1982, 0, 0, 0, 0, 0, 0, 99.4412, 0, 59.3211, 0, 0, 0, 0, 0, 0, 104.905, 0, 62.8438, 0, 0, 0, 0, 0, 0, 110.303, 0, 65.5037, 0, 0, 0, 0, 0, 0, 115.849, 0, 67.3216, 0, 0, 0, 0, 0, 0, 121.594, 0, 68.1981, 0, 0, 0, 0, 0, 0, 127.318, 0, 68.0841, 0, 0, 0, 0, 0, 0, 132.859, 0, 66.9905, 0, 0, 0, 0, 0, 0, 138.015, 0, 64.9129, 0, 0, 0, 0, 0, 0, 142.833, 0, 61.858, 0, 0, 0, 0, 0, 0, 147.408, 0, 57.7748, 0, 0, 0, 0, 0, 0, 151.647, 0, 52.7693, 0, 0, 0, 0, 0, 0, 154.606, 0, 48.4456, 0, 0, 0, 0, 0, 0, 157.252, 0, 43.8902, 0, 0, 0, 0, 0, 0, 159.592, 0, 39.2176, 0, 0, 0, 0, 0, 0, 161.768, 0, 34.2242, 0, 0, 0, 0, 0, 0, 163.76, 0, 28.9894, 0, 0, 0, 0, 0, 0, 180.739, -1, 15.436, 0, 0, 0, 0, 0, 0, 186.339, -1, -19.6992, 0, 0, 0, 0, 0, 0, 187.545, -1, -53.7203, 0, 0, 0, 0, 0, 0, 187.605, -1, -87.7833, 0, 0, 0, 0, 0, 0, 186.945, -1, -122.271, 0, 0, 0, 0, 0, 0, 185.104, -1, -156.245, 0, 0, 0, 0, 0, 0, 181.507, -1, -189.48, 0, 0, 0, 0, 0, 0, 175.117, -1, -221.056, 0, 0, 0, 0, 0, 0, 162.002, 0, -221.391, 0, 0, 0, 0, 0, 0, 160.302, 0, -226.567, 0, 0, 0, 0, 0, 0, 158.453, 0, -231.404, 0, 0, 0, 0, 0, 0, 155.715, 0, -237.286, 0, 0, 0, 0, 0, 0, 152.404, 0, -242.696, 0, 0, 0, 0, 0, 0, 148.853, 0, -246.706, 0, 0, 0, 0, 0, 0, 144.033, 0, -249.332, 0, 0, 0, 0, 0, 0, 137.835, 0, -249.226, 0, 0, 0, 0, 0, 0, 131.905, 0, -248.013, 0, 0, 0, 0, 0, 0, 125.587, 0, -245.846, 0, 0, 0, 0, 0, 0, 120.798, 0, -243.701, 0, 0, 0, 0, 0, 0, 115.863, 0, -241.108, 0, 0, 0, 0, 0, 0, 110.994, 0, -238.221, 0, 0, 0, 0, 0, 0, 78.6721, -1, -230.079, 0, 0, 0, 0, 0, 0, 54.5107, -1, -210.281, 0, 0, 0, 0, 0, 0, 33.8349, 0, -179.789, 0, 0, 0, 0, 0, 0, 28.2674, 0, -176.524, 0, 0, 0, 0, 0, 0, 22.5564, 0, -173.538, 0, 0, 0, 0, 0, 0, 16.7298, 0, -170.908, 0, 0, 0, 0, 0, 0, 9.99442, 0, -168.438, 0, 0, 0, 0, 0, 0, 3.05768, 0, -166.585, 0, 0, 0, 0, 0, 0, -4.33104, 0, -165.438, 0, 0, 0, 0, 0, 0, -9.40808, 0, -165.175, 0, 0, 0, 0, 0, 0, -15.5829, 0, -165.229, 0, 0, 0, 0, 0, 0, -19.1179, -1, -177.827, 0, 0, 0, 0, 0, 0, -53.4462, -1, -181.056, 0, 0, 0, 0, 0, 0, -86.3802, -1, -186.53, 0, 0, 0, 0, 0, 0, -120.535, -1, -190.509, 0, 0, 0, 0, 0, 0, -136.562, 0, -178.496, 0, 0, 0, 0, 0, 0, -143.919, 0, -178.905, 0, 0, 0, 0, 0, 0, -151.015, 0, -180.123, 0, 0, 0, 0, 0, 0, -157.878, 0, -182.022, 0, 0, 0, 0, 0, 0, -164.565, 0, -184.507, 0, 0, 0, 0, 0, 0, -170.845, 0, -187.366, 0, 0, 0, 0, 0, 0, -176.997, 0, -190.616, 0, 0, 0, 0, 0, 0, -191.03, -1, -214.807, 0, 0, 0, 0, 0, 0, -217.177, -1, -235.313, 0, 0, 0, 0, 0, 0, -244.688, -1, -255.916, 0, 0, 0, 0, 0, 0, -257.776, 0, -249.407, 0, 0, 0, 0, 0, 0, -262.816, 0, -252.272, 0, 0, 0, 0, 0, 0, -267.719, 0, -254.726, 0, 0, 0, 0, 0, 0, -272.546, 0, -256.771, 0, 0, 0, 0, 0, 0, -277.301, 0, -258.367, 0, 0, 0, 0, 0, 0, -283.432, 0, -259.705, 0, 0, 0, 0, 0, 0, -289.186, 0, -260.082, 0, 0, 0, 0, 0, 0, -294.787, 0, -258.546, 0, 0, 0, 0, 0, 0, -299.052, 0, -254.827, 0, 0, 0, 0, 0, 0, -302.256, 0, -250.225, 0, 0, 0, 0, 0, 0, -305.194, 0, -244.427, 0, 0, 0, 0, 0, 0, -307.094, 0, -239.763, 0, 0, 0, 0, 0, 0, -308.856, 0, -234.729, 0, 0, 0, 0, 0, 0, -327.795, -1, -212.237, 0, 0, 0, 0, 0, 0, -335.847, -1, -180.611, 0, 0, 0, 0, 0, 0, -325.188, 0, -172.912, 0, 0, 0, 0, 0, 0, -327.357, 0, -166.85, 0, 0, 0, 0, 0, 0, -329.846, 0, -160.89, 0, 0, 0, 0, 0, 0, -333.026, 0, -154.591, 0, 0, 0, 0, 0, 0, -336.959, 0, -148.419, 0, 0, 0, 0, 0, 0, -340.145, 0, -144.447, 0, 0, 0, 0, 0, 0, -344.125, 0, -140.492, 0, 0, 0, 0, 0, 0, -348.702, 0, -137.044, 0, 0, 0, 0, 0, 0, -354.002, 0, -134.217, 0, 0, 0, 0, 0, 0, -359.771, 0, -132.288, 0, 0, 0, 0, 0, 0, -365.683, 0, -131.348, 0, 0, 0, 0, 0, 0, -372.336, 0, -131.155, 0, 0, 0, 0, 0, 0, -382.729, 0, -130.077, 0, 0, 0, 0, 0, 0, -387.727, 0, -129.061, 0, 0, 0, 0, 0, 0, -394.2, 0, -127.249, 0, 0, 0, 0, 0, 0, -399.273, 0, -125.45, 0, 0, 0, 0, 0, 0, -427.246, -1, -125.821, 0, 0, 0, 0, 0, 0, -444.031, 0, -103.514, 0, 0, 0, 0, 0, 0, -450.207, 0, -101.078, 0, 0, 0, 0, 0, 0, -456.632, 0, -98.9403, 0, 0, 0, 0, 0, 0, -462.904, 0, -97.259, 0, 0, 0, 0, 0, 0, -469.472, 0, -95.9292, 0, 0, 0, 0, 0, 0, -476.138, 0, -95.0204, 0, 0, 0, 0, 0, 0, -482.946, 0, -94.5324, 0, 0, 0, 0, 0, 0, -489.642, 0, -94.4647, 0, 0, 0, 0, 0, 0, -496.382, 0, -94.8227, 0, 0, 0, 0, 0, 0, -503.121, 0, -95.6717, 0, 0, 0, 0, 0, 0, -510.058, 0, -97.138, 0, 0, 0, 0, 0, 0, -516.831, 0, -99.2348, 0, 0, 0, 0, 0, 0, -523.367, 0, -101.961, 0, 0, 0, 0, 0, 0, -529.572, 0, -105.237, 0, 0, 0, 0, 0, 0, -535.324, 0, -108.87, 0, 0, 0, 0, 0, 0, -538.296, -1, -126.535, 0, 0, 0, 0, 0, 0, -553.619, 0, -122.205, 0, 0, 0, 0, 0, 0, -557.924, 0, -124.891, 0, 0, 0, 0, 0, 0, -563.66, 0, -127.762, 0, 0, 0, 0, 0, 0, -569.703, 0, -129.89, 0, 0, 0, 0, 0, 0, -576.156, 0, -131.281, 0, 0, 0, 0, 0, 0, -581.174, 0, -131.852, 0, 0, 0, 0, 0, 0, -586.342, 0, -132.065, 0, 0, 0, 0, 0, 0, -592.626, 0, -131.667, 0, 0, 0, 0, 0, 0, -598.752, 0, -130.368, 0, 0, 0, 0, 0, 0, -603.52, 0, -128.802, 0, 0, 0, 0, 0, 0, -609.436, 0, -126.241, 0, 0, 0, 0, 0, 0, -615.313, 0, -123.061, 0, 0, 0, 0, 0, 0, -619.751, 0, -120.255, 0, 0, 0, 0, 0, 0, -623.984, 0, -117.261, 0, 0, 0, 0, 0, 0, -628.2, 0, -113.972, 0, 0, 0, 0, 0, 0, -632.373, 0, -110.411, 0, 0, 0, 0, 0, 0, -658.739, -1, -100.807, 0, 0, 0, 0, 0, 0, -676.723, -1, -74.4493, 0, 0, 0, 0, 0, 0, -674.022, 0, -51.4488, 0, 0, 0, 0, 0, 0, -675.953, 0, -46.4417, 0, 0, 0, 0, 0, 0, -677.703, 0, -41.2356, 0, 0, 0, 0, 0, 0, -679.242, 0, -35.7654, 0, 0, 0, 0, 0, 0, -680.411, 0, -30.4788, 0, 0, 0, 0, 0, 0, -681.203, 0, -25.4021, 0, 0, 0, 0, 0, 0, -681.621, 0, -20.4051, 0, 0, 0, 0, 0, 0, -681.519, 0, -13.9938, 0, 0, 0, 0, 0, 0, -680.653, 0, -7.5697, 0, 0, 0, 0, 0, 0, -679.509, 0, -2.57795, 0, 0, 0, 0, 0, 0, -677.956, 0, 2.50546, 0, 0, 0, 0, 0, 0, -676.075, 0, 7.49378, 0, 0, 0, 0, 0, 0, -673.835, 0, 12.5197, 0, 0, 0, 0, 0, 0, -671.251, 0, 17.5595, 0, 0, 0, 0, 0, 0, -668.341, 0, 22.5834, 0, 0, 0, 0, 0, 0, -665.298, 0, 27.3075, 0, 0, 0, 0, 0, 0, -662.249, 0, 31.6253, 0, 0, 0, 0, 0, 0, -662.389, -1, 51.1524, 0, 0, 0, 0, 0, 0, -637.531, -1, 73.2937, 0, 0, 0, 0, 0, 0, -628.849, 0, 64.1157, 0, 0, 0, 0, 0, 0, -624.409, 0, 67.0499, 0, 0, 0, 0, 0, 0, -619.801, 0, 69.8142, 0, 0, 0, 0, 0, 0, -615.175, 0, 72.3052, 0, 0, 0, 0, 0, 0, -610.55, 0, 74.5098, 0, 0, 0, 0, 0, 0, -604.421, 0, 76.9837, 0, 0, 0, 0, 0, 0, -599.532, 0, 78.5769, 0, 0, 0, 0, 0, 0, -594.508, 0, 79.842, 0, 0, 0, 0, 0, 0, -589.528, 0, 80.6955, 0, 0, 0, 0, 0, 0, -583.043, 0, 81.1437, 0, 0, 0, 0, 0, 0, -577.803, 0, 80.9936, 0, 0, 0, 0, 0, 0, -572.251, 0, 80.5329, 0, 0, 0, 0, 0, 0, -536.195, -1, 86.4777, 0, 0, 0, 0, 0, 0, -503.651, -1, 77.759, 0, 0, 0, 0, 0, 0, -469.916, -1, 67.943, 0, 0, 0, 0, 0, 0, -436.929, -1, 58.7762, 0, 0, 0, 0, 0, 0, -402.767, -1, 51.3677, 0, 0, 0, 0, 0, 0, -369.344, -1, 49.5682, 0, 0, 0, 0, 0, 0, -335.734, -1, 50.7161, 0, 0, 0, 0, 0, 0, -302.358, -1, 52.5504, 0, 0, 0, 0, 0, 0, -267.921, -1, 53.8022, 0, 0, 0, 0, 0, 0, -252.125, 0, 41.4152, 0, 0, 0, 0, 0, 0, -246.799, 0, 41.2115, 0, 0, 0, 0, 0, 0, -241.687, 0, 40.6876, 0, 0, 0, 0, 0, 0, -235.668, 0, 39.402, 0, 0, 0, 0, 0, 0, -230.963, 0, 37.4226, 0, 0, 0, 0, 0, 0, -226.814, 0, 34.2834, 0, 0, 0, 0, 0, 0, -221.089, 0, 28.6678, 0, 0, 0, 0, 0, 0, -217.147, 0, 25.2686, 0, 0, 0, 0, 0, 0, -212.592, 0, 22.1501, 0, 0, 0, 0, 0, 0, -207.597, 0, 19.5878, 0, 0, 0, 0, 0, 0, -202.591, 0, 17.7223, 0, 0, 0, 0, 0, 0, -197.655, 0, 16.4117, 0, 0, 0, 0, 0, 0, -190.516, 0, 15.2113, 0, 0, 0, 0, 0, 0, -183.659, 0, 14.631, 0, 0, 0, 0, 0, 0, -169.9, 0, 14.2443, 0, 0, 0, 0, 0, 0, -164.793, 0, 13.7155, 0, 0, 0, 0, 0, 0, -158.803, 0, 12.4281, 0, 0, 0, 0, 0, 0, -154.039, 0, 10.4042, 0, 0, 0, 0, 0, 0, -149.873, 0, 7.21496, 0, 0, 0, 0, 0, 0, -139.891, -1, 14.9559, 0, 0, 0, 0, 0, 0, -144.087, 0, 1.54146, 0, 0, 0, 0, 0, 0, -140.106, 0, -1.85935, 0, 0, 0, 0, 0, 0, -135.467, 0, -4.98836, 0, 0, 0, 0, 0, 0, -130.56, 0, -7.46571, 0, 0, 0, 0, 0, 0, -125.613, 0, -9.28734, 0, 0, 0, 0, 0, 0, -120.678, 0, -10.5837, 0, 0, 0, 0, 0, 0, -113.509, 0, -11.7726, 0, 0, 0, 0, 0, 0, -106.651, 0, -12.3405, 0, 0, 0, 0, 0, 0, -72.0997, -1, 0, 0, 0, 0, 0, 0, 0, -37.984, -1, 0, 0, 0, 0, 0, 0, 0, -4.00048, -1, 0 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="Curve3D" id=5]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 17.7172, 0, 17.3017, 0, 0, 0, 0, 0, 0, 23.171, 0, 20.6529, 0, 0, 0, 0, 0, 0, 27.2935, 0, 23.6971, 0, 0, 0, 0, 0, 0, 31.3039, 0, 27.0334, 0, 0, 0, 0, 0, 0, 46.8419, -1, 24.4581, 0, 0, 0, 0, 0, 0, 70.0349, -1, 49.2376, 0, 0, 0, 0, 0, 0, 74.6717, 0, 71.3941, 0, 0, 0, 0, 0, 0, 79.6029, 0, 75.6079, 0, 0, 0, 0, 0, 0, 84.8961, 0, 79.6544, 0, 0, 0, 0, 0, 0, 90.561, 0, 83.4057, 0, 0, 0, 0, 0, 0, 96.5644, 0, 86.7107, 0, 0, 0, 0, 0, 0, 102.937, 0, 89.465, 0, 0, 0, 0, 0, 0, 109.987, 0, 91.6246, 0, 0, 0, 0, 0, 0, 114.932, 0, 92.5987, 0, 0, 0, 0, 0, 0, 120.001, 0, 93.1472, 0, 0, 0, 0, 0, 0, 125.048, 0, 93.2528, 0, 0, 0, 0, 0, 0, 132.313, 0, 92.647, 0, 0, 0, 0, 0, 0, 137.458, 0, 91.6389, 0, 0, 0, 0, 0, 0, 142.437, 0, 90.161, 0, 0, 0, 0, 0, 0, 147.19, 0, 88.2446, 0, 0, 0, 0, 0, 0, 151.694, 0, 85.9235, 0, 0, 0, 0, 0, 0, 155.935, 0, 83.2354, 0, 0, 0, 0, 0, 0, 161.797, 0, 78.5982, 0, 0, 0, 0, 0, 0, 167.074, 0, 73.3403, 0, 0, 0, 0, 0, 0, 171.676, 0, 67.7309, 0, 0, 0, 0, 0, 0, 175.779, 0, 61.7377, 0, 0, 0, 0, 0, 0, 179.273, 0, 55.7246, 0, 0, 0, 0, 0, 0, 182.247, 0, 49.7897, 0, 0, 0, 0, 0, 0, 184.927, 0, 43.6405, 0, 0, 0, 0, 0, 0, 187.318, 0, 37.3571, 0, 0, 0, 0, 0, 0, 180.739, -1, 15.436, 0, 0, 0, 0, 0, 0, 186.339, -1, -19.6992, 0, 0, 0, 0, 0, 0, 187.545, -1, -53.7203, 0, 0, 0, 0, 0, 0, 187.605, -1, -87.7833, 0, 0, 0, 0, 0, 0, 186.945, -1, -122.271, 0, 0, 0, 0, 0, 0, 185.104, -1, -156.245, 0, 0, 0, 0, 0, 0, 181.507, -1, -189.48, 0, 0, 0, 0, 0, 0, 175.117, -1, -221.056, 0, 0, 0, 0, 0, 0, 185.911, 0, -228.694, 0, 0, 0, 0, 0, 0, 183.872, 0, -234.903, 0, 0, 0, 0, 0, 0, 181.55, 0, -240.97, 0, 0, 0, 0, 0, 0, 178.885, 0, -246.874, 0, 0, 0, 0, 0, 0, 175.463, 0, -253.125, 0, 0, 0, 0, 0, 0, 172.647, 0, -257.366, 0, 0, 0, 0, 0, 0, 169.302, 0, -261.543, 0, 0, 0, 0, 0, 0, 165.389, 0, -265.456, 0, 0, 0, 0, 0, 0, 160.629, 0, -269.063, 0, 0, 0, 0, 0, 0, 155.169, 0, -271.935, 0, 0, 0, 0, 0, 0, 149.085, 0, -273.817, 0, 0, 0, 0, 0, 0, 142.761, 0, -274.509, 0, 0, 0, 0, 0, 0, 137.286, 0, -274.303, 0, 0, 0, 0, 0, 0, 132.248, 0, -273.667, 0, 0, 0, 0, 0, 0, 125.236, 0, -272.107, 0, 0, 0, 0, 0, 0, 118.413, 0, -269.881, 0, 0, 0, 0, 0, 0, 111.92, 0, -267.16, 0, 0, 0, 0, 0, 0, 105.676, 0, -264.035, 0, 0, 0, 0, 0, 0, 99.5525, 0, -260.532, 0, 0, 0, 0, 0, 0, 78.6721, -1, -230.079, 0, 0, 0, 0, 0, 0, 54.5107, -1, -210.281, 0, 0, 0, 0, 0, 0, 20.7399, 0, -201.085, 0, 0, 0, 0, 0, 0, 16.1342, 0, -198.383, 0, 0, 0, 0, 0, 0, 11.599, 0, -196.009, 0, 0, 0, 0, 0, 0, 5.59244, 0, -193.38, 0, 0, 0, 0, 0, 0, -0.616042, 0, -191.394, 0, 0, 0, 0, 0, 0, -6.65794, 0, -190.329, 0, 0, 0, 0, 0, 0, -13.2467, 0, -190.194, 0, 0, 0, 0, 0, 0, -19.1179, -1, -177.827, 0, 0, 0, 0, 0, 0, -53.4462, -1, -181.056, 0, 0, 0, 0, 0, 0, -86.3802, -1, -186.53, 0, 0, 0, 0, 0, 0, -120.535, -1, -190.509, 0, 0, 0, 0, 0, 0, -136.524, 0, -203.496, 0, 0, 0, 0, 0, 0, -142.52, 0, -203.939, 0, 0, 0, 0, 0, 0, -148.56, 0, -205.305, 0, 0, 0, 0, 0, 0, -153.328, 0, -206.933, 0, 0, 0, 0, 0, 0, -158.156, 0, -209.003, 0, 0, 0, 0, 0, 0, -163.075, 0, -211.488, 0, 0, 0, 0, 0, 0, -168.123, 0, -214.377, 0, 0, 0, 0, 0, 0, -191.03, -1, -214.807, 0, 0, 0, 0, 0, 0, -217.177, -1, -235.313, 0, 0, 0, 0, 0, 0, -244.688, -1, -255.916, 0, 0, 0, 0, 0, 0, -244.935, 0, -270.858, 0, 0, 0, 0, 0, 0, -251.021, 0, -274.314, 0, 0, 0, 0, 0, 0, -257.227, 0, -277.418, 0, 0, 0, 0, 0, 0, -263.666, 0, -280.141, 0, 0, 0, 0, 0, 0, -270.422, 0, -282.402, 0, 0, 0, 0, 0, 0, -277.469, 0, -284.059, 0, 0, 0, 0, 0, 0, -284.881, 0, -284.972, 0, 0, 0, 0, 0, 0, -290.227, 0, -285.061, 0, 0, 0, 0, 0, 0, -296.235, 0, -284.358, 0, 0, 0, 0, 0, 0, -302.044, 0, -282.69, 0, 0, 0, 0, 0, 0, -307.46, 0, -280.096, 0, 0, 0, 0, 0, 0, -312.223, 0, -276.796, 0, 0, 0, 0, 0, 0, -316.358, 0, -272.962, 0, 0, 0, 0, 0, 0, -319.747, 0, -268.972, 0, 0, 0, 0, 0, 0, -323.839, 0, -262.843, 0, 0, 0, 0, 0, 0, -327.173, 0, -256.478, 0, 0, 0, 0, 0, 0, -329.722, 0, -250.562, 0, 0, 0, 0, 0, 0, -331.954, 0, -244.485, 0, 0, 0, 0, 0, 0, -327.795, -1, -212.237, 0, 0, 0, 0, 0, 0, -335.847, -1, -180.611, 0, 0, 0, 0, 0, 0, -348.902, 0, -180.825, 0, 0, 0, 0, 0, 0, -350.686, 0, -175.834, 0, 0, 0, 0, 0, 0, -353.298, 0, -169.761, 0, 0, 0, 0, 0, 0, -356.381, 0, -164.275, 0, 0, 0, 0, 0, 0, -359.696, 0, -160.137, 0, 0, 0, 0, 0, 0, -363.902, 0, -157.173, 0, 0, 0, 0, 0, 0, -370.995, 0, -156.203, 0, 0, 0, 0, 0, 0, -386.927, 0, -154.722, 0, 0, 0, 0, 0, 0, -393.482, 0, -153.389, 0, 0, 0, 0, 0, 0, -399.749, 0, -151.705, 0, 0, 0, 0, 0, 0, -406.185, 0, -149.558, 0, 0, 0, 0, 0, 0, -412.357, 0, -147.119, 0, 0, 0, 0, 0, 0, -427.246, -1, -125.821, 0, 0, 0, 0, 0, 0, -453.763, 0, -126.542, 0, 0, 0, 0, 0, 0, -458.769, 0, -124.567, 0, 0, 0, 0, 0, 0, -463.812, 0, -122.887, 0, 0, 0, 0, 0, 0, -470.279, 0, -121.223, 0, 0, 0, 0, 0, 0, -475.306, 0, -120.315, 0, 0, 0, 0, 0, 0, -480.459, 0, -119.725, 0, 0, 0, 0, 0, 0, -485.673, 0, -119.46, 0, 0, 0, 0, 0, 0, -490.768, 0, -119.509, 0, 0, 0, 0, 0, 0, -495.82, 0, -119.889, 0, 0, 0, 0, 0, 0, -502.22, 0, -120.959, 0, 0, 0, 0, 0, 0, -508.29, 0, -122.73, 0, 0, 0, 0, 0, 0, -514.046, 0, -125.232, 0, 0, 0, 0, 0, 0, -519.823, 0, -128.587, 0, 0, 0, 0, 0, 0, -538.296, -1, -126.535, 0, 0, 0, 0, 0, 0, -539.727, 0, -142.989, 0, 0, 0, 0, 0, 0, -545.506, 0, -146.588, 0, 0, 0, 0, 0, 0, -551.742, 0, -149.82, 0, 0, 0, 0, 0, 0, -558.323, 0, -152.498, 0, 0, 0, 0, 0, 0, -565.367, 0, -154.598, 0, 0, 0, 0, 0, 0, -572.363, 0, -155.991, 0, 0, 0, 0, 0, 0, -579.314, 0, -156.783, 0, 0, 0, 0, 0, 0, -586.147, 0, -157.064, 0, 0, 0, 0, 0, 0, -591.312, 0, -156.925, 0, 0, 0, 0, 0, 0, -598.527, 0, -156.037, 0, 0, 0, 0, 0, 0, -605.501, 0, -154.44, 0, 0, 0, 0, 0, 0, -612.342, 0, -152.194, 0, 0, 0, 0, 0, 0, -618.472, 0, -149.624, 0, 0, 0, 0, 0, 0, -624.275, 0, -146.714, 0, 0, 0, 0, 0, 0, -629.961, 0, -143.414, 0, 0, 0, 0, 0, 0, -635.436, 0, -139.815, 0, 0, 0, 0, 0, 0, -640.632, 0, -136.015, 0, 0, 0, 0, 0, 0, -645.697, 0, -131.94, 0, 0, 0, 0, 0, 0, -658.739, -1, -100.807, 0, 0, 0, 0, 0, 0, -676.723, -1, -74.4493, 0, 0, 0, 0, 0, 0, -697.163, 0, -60.9084, 0, 0, 0, 0, 0, 0, -699.461, 0, -54.9483, 0, 0, 0, 0, 0, 0, -701.586, 0, -48.6265, 0, 0, 0, 0, 0, 0, -703.487, 0, -41.8638, 0, 0, 0, 0, 0, 0, -704.974, 0, -35.1319, 0, 0, 0, 0, 0, 0, -706.022, 0, -28.4042, 0, 0, 0, 0, 0, 0, -706.598, 0, -21.4781, 0, 0, 0, 0, 0, 0, -706.589, 0, -14.3616, 0, 0, 0, 0, 0, 0, -705.954, 0, -7.45921, 0, 0, 0, 0, 0, 0, -704.748, 0, -0.611578, 0, 0, 0, 0, 0, 0, -703.02, 0, 6.16391, 0, 0, 0, 0, 0, 0, -700.844, 0, 12.7619, 0, 0, 0, 0, 0, 0, -698.293, 0, 19.1357, 0, 0, 0, 0, 0, 0, -695.351, 0, 25.421, 0, 0, 0, 0, 0, 0, -692.045, 0, 31.6015, 0, 0, 0, 0, 0, 0, -688.399, 0, 37.6624, 0, 0, 0, 0, 0, 0, -684.819, 0, 43.0438, 0, 0, 0, 0, 0, 0, -662.389, -1, 51.1524, 0, 0, 0, 0, 0, 0, -637.531, -1, 73.2937, 0, 0, 0, 0, 0, 0, -643.054, 0, 84.6875, 0, 0, 0, 0, 0, 0, -637.728, 0, 88.2067, 0, 0, 0, 0, 0, 0, -632.154, 0, 91.5494, 0, 0, 0, 0, 0, 0, -626.475, 0, 94.6056, 0, 0, 0, 0, 0, 0, -620.704, 0, 97.3548, 0, 0, 0, 0, 0, 0, -614.855, 0, 99.7755, 0, 0, 0, 0, 0, 0, -608.725, 0, 101.913, 0, 0, 0, 0, 0, 0, -601.956, 0, 103.788, 0, 0, 0, 0, 0, 0, -595.046, 0, 105.158, 0, 0, 0, 0, 0, 0, -587.947, 0, 105.964, 0, 0, 0, 0, 0, 0, -580.82, 0, 106.126, 0, 0, 0, 0, 0, 0, -574.082, 0, 105.8, 0, 0, 0, 0, 0, 0, -567.34, 0, 105.137, 0, 0, 0, 0, 0, 0, -536.195, -1, 86.4777, 0, 0, 0, 0, 0, 0, -503.651, -1, 77.759, 0, 0, 0, 0, 0, 0, -469.916, -1, 67.943, 0, 0, 0, 0, 0, 0, -436.929, -1, 58.7762, 0, 0, 0, 0, 0, 0, -402.767, -1, 51.3677, 0, 0, 0, 0, 0, 0, -369.344, -1, 49.5682, 0, 0, 0, 0, 0, 0, -335.734, -1, 50.7161, 0, 0, 0, 0, 0, 0, -302.358, -1, 52.5504, 0, 0, 0, 0, 0, 0, -267.921, -1, 53.8022, 0, 0, 0, 0, 0, 0, -251.797, 0, 66.413, 0, 0, 0, 0, 0, 0, -245.111, 0, 66.1545, 0, 0, 0, 0, 0, 0, -238.111, 0, 65.4305, 0, 0, 0, 0, 0, 0, -230.841, 0, 64.0029, 0, 0, 0, 0, 0, 0, -225.914, 0, 62.501, 0, 0, 0, 0, 0, 0, -220.961, 0, 60.4062, 0, 0, 0, 0, 0, 0, -216.088, 0, 57.6024, 0, 0, 0, 0, 0, 0, -211.725, 0, 54.3097, 0, 0, 0, 0, 0, 0, -203.959, 0, 46.8771, 0, 0, 0, 0, 0, 0, -199.806, 0, 43.6326, 0, 0, 0, 0, 0, 0, -195.112, 0, 41.5772, 0, 0, 0, 0, 0, 0, -189.136, 0, 40.2497, 0, 0, 0, 0, 0, 0, -184.116, 0, 39.7057, 0, 0, 0, 0, 0, 0, -168.205, 0, 39.1868, 0, 0, 0, 0, 0, 0, -161.209, 0, 38.4573, 0, 0, 0, 0, 0, 0, -154.014, 0, 37.0407, 0, 0, 0, 0, 0, 0, -149.018, 0, 35.5138, 0, 0, 0, 0, 0, 0, -143.947, 0, 33.351, 0, 0, 0, 0, 0, 0, -139.07, 0, 30.5125, 0, 0, 0, 0, 0, 0, -134.712, 0, 27.189, 0, 0, 0, 0, 0, 0, -139.891, -1, 14.9559, 0, 0, 0, 0, 0, 0, -127.012, 0, 19.8019, 0, 0, 0, 0, 0, 0, -122.844, 0, 16.5904, 0, 0, 0, 0, 0, 0, -118.202, 0, 14.589, 0, 0, 0, 0, 0, 0, -112.215, 0, 13.2732, 0, 0, 0, 0, 0, 0, -107.149, 0, 12.7334, 0, 0, 0, 0, 0, 0, -101.849, 0, 12.514, 0, 0, 0, 0, 0, 0, -72.0997, -1, 0, 0, 0, 0, 0, 0, 0, -37.984, -1, 0, 0, 0, 0, 0, 0, 0, -4.00048, -1, 0 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="track_generator" type="Spatial"]
transform = Transform( 0.999997, 1.14436e-10, 0.00261799, -1.14436e-10, 1, -1.48508e-13, -0.00261799, -1.48508e-13, 0.999997, 0, 0, 0 )
script = ExtResource( 2 )
dirty_flag = false
point_distance = 100
control_distance = 50
offset_distance = 100
track_type = 824631170
curve_angle_limit = 0.25
rng_seed = 590261251

[node name="starting_pos_marker" type="MeshInstance" parent="."]
transform = Transform( -4.37722e-08, 1, 0, 4.37114e-08, 1.91516e-15, -1, -1, -4.37722e-08, -4.37114e-08, -32.7914, -3.75253e-09, -0.0858479 )
mesh = SubResource( 3 )

[node name="track" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
curb_threshold = 0.985
curb_offset = 0.0
curb_width = 2.0

[node name="path" parent="track" index="0"]
transform = Transform( 1, 2.14061e-19, 0, 2.77766e-17, 1, -2.71051e-20, 0, 0, 1, 0, 0, 0 )

[node name="left_curb" parent="track" index="1"]
curve = SubResource( 4 )

[node name="curb" parent="track/left_curb" index="0"]
polygon = PoolVector2Array( -2, 0, -2, 0.1, 0, 0.1, 0, 0 )

[node name="right_curb" parent="track" index="2"]
curve = SubResource( 5 )

[node name="curb" parent="track/right_curb" index="0"]
polygon = PoolVector2Array( 2, 0, 2, 0.1, 0, 0.1, 0, 0 )

[node name="topdown_camera" type="Camera" parent="."]
unique_name_in_owner = true
transform = Transform( 1, 0, -1.11022e-16, 6.94099e-17, -4.37114e-08, 1, 0, -1, -4.37113e-08, -253.093, 500, -90.1362 )
current = true
far = 1000.0

[node name="Camera2" type="Camera" parent="."]
transform = Transform( -4.37722e-08, 2.09905e-20, -1, -2.71051e-20, 1, 4.1619e-17, 1, -2.57673e-15, -4.37722e-08, -24.0172, 5, -0.062877 )
far = 500.0

[node name="GUI" type="CanvasLayer" parent="."]

[node name="GridContainer" type="GridContainer" parent="GUI"]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = -8.0
theme = ExtResource( 5 )
columns = 2

[node name="seed_label" type="Label" parent="GUI/GridContainer"]
margin_right = 61.0
margin_bottom = 18.0
text = "Seed: "

[node name="seed_value" type="Label" parent="GUI/GridContainer"]
unique_name_in_owner = true
margin_left = 65.0
margin_right = 170.0
margin_bottom = 18.0
text = "590261251"

[node name="Label3" type="Label" parent="GUI/GridContainer"]
visible = false
margin_top = 34.0
margin_right = 61.0
margin_bottom = 52.0
text = "Test"

[node name="HSlider" type="HSlider" parent="GUI/GridContainer"]
visible = false
margin_top = 22.0
margin_right = 192.0
margin_bottom = 64.0
rect_min_size = Vector2( 100, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -185.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="randomize_btyn" type="Button" parent="GUI/VBoxContainer"]
margin_right = 177.0
margin_bottom = 42.251
focus_mode = 0
theme = ExtResource( 5 )
text = "Randomize"

[node name="test_track_btn" type="Button" parent="GUI/VBoxContainer"]
margin_top = 46.0
margin_right = 177.0
margin_bottom = 88.251
focus_mode = 0
theme = ExtResource( 5 )
text = "TEST DRIVE"

[connection signal="pressed" from="GUI/VBoxContainer/randomize_btyn" to="." method="_on_randomize_btyn_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/test_track_btn" to="." method="_on_test_track_btn_pressed"]

[editable path="track"]
